* Fixed: Instagram Feed - Removed the option "Likes" as Instagram Basic Display API does not support it
* Fixed: Instagram Feed - Removed the option "Comments" as Instagram Basic Display API does not support it
* Fixed: Instagram Feed - Removed the option "Feed by Hashtag" as Instagram Basic Display API does not support it
* Fixed: Icon List - Spacing issue with RTL layout
* Enhancement: Pricing Table - Added ppe_pricing_table_currency filter hook

== 2.6.16 ==
Release date: July 6, 2022
* Enhancement: Pricing Table - Added Icon Spacing option for tooltip icons
* Enhancement: Posts - Added Avoid Duplicates option
* Enhancement: Advanced Accordion - Added ability to open accordions using keypress
* Enhancement: WP Forms - Added styling options for Section Divider

== 2.6.15 ==
Release date: June 9, 2022
* Enhancement: Team Member Carousel - Added support for Tiktok social icon
* Enhancement: WPForms - Added compatibility for Modern style dropdown fields
* Enhancement: Info Box Carousel - Added compatibility for Elementor containers

== 2.6.14 ==
Release date: May 11, 2022
* Enhancement: Advanced Accordion - Added Custom CSS ID option
* Enhancement: Advanced Accordion - Rearranged the repeater content inside tabs
* Enhancement: Flip Box - Added content background and padding options
* Fixed: Animated Gradient Background - Background overlay was overriding the gradient effect in editor
* Fixed: Hotspots - Tooltip position issue
* Enhancement: Core - Added support for Elementor Containers in Saved Section option
* Enhancement: Core - Added support for Elementor Containers to PowerPack extensions

== 2.6.13 ==
Release date: April 15, 2022
* Fixed: Image Comparison - JS error preventing the widget from working

== 2.6.12 ==
Release date: April 13, 2022
* Enhancement: Team Member - Added: Margin option for image
* Enhancement: Advanced Accordion - Added border radius option for title
* Enhancement: Twitter Tweet - Added support for URL dynamic tags