@@ -7,6 +7,7 @@ Release date:
 * Fixed: Instagram Feed - Removed the option "Comments" as Instagram Basic Display API does not support it
 * Fixed: Instagram Feed - Removed the option "Feed by Hashtag" as Instagram Basic Display API does not support it
 * Fixed: Icon List - Spacing issue with RTL layout
+* Fixed: Advanced Posts - Exclude posts option
 * Enhancement: Pricing Table - Added ppe_pricing_table_currency filter hook
 
 == 2.6.16 ==
